[tool.poetry]
name = "balancer"
version = "0.1.0"
description = "Balancer for test task"
authors = ["Andryukov Alexander"]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^21.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
