[tool.poetry]
name = "balancer"
version = "0.1.0"
description = "Balancer for test task"
authors = ["Andryukov Alexander"]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^21.12.1"
python-dotenv = "^0.19.2"
aioredis = "^2.0.1"
redis = "^4.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
